change js and html

--- a/git2.html
+++ b/git2.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>thus is a git2.html file</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </body>
 </html>
